static/style.css
body{
    font-family: Roboto;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  header{
    margin: auto;
    width: 100%;
	  min-width: 100%;
    height: 90px;
    background-image: linear-gradient(to top right, #2d2279, #8c2d8b);
	  font-family: Roboto, Helvetica, "sans-serif";
	  font-size: 16px;
	  font-weight: 400;
  	-webkit-font-smoothing: antialiased;
  	z-index: 400;
   	position: fixed;
  	top: 0;
  	left: 0;
    right: 0;
    
  }
  h1{
    padding-top: 20px;
    padding-bottom: 20px;
    text-align: left;
    font-family: 'Roboto', sans-serif;
    margin: 0 auto;
    font-size: 3.0em;
    font-weight: bold;
    color: #a242a3;
    box-sizing: border-box;
  }
  h2{
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
    font-weight: bold;
    color: black;
    text-align: left;
    box-sizing: border-box;
  }
  .results-heading{
    text-align: center;
  }
  #results-area{
    width: 80%;
    margin: 0 auto;
    text-align: center;
  }
  .logo{
      width: 25%;
      float: left;
      margin: auto;
      position: relative;
      text-align: center;
      top: 3px;
      padding: 16px;
      
  }
  .heading{
    margin: 0 auto;
    text-align: center;
    width: 80%;
    padding-top: 100px;
  }
  .main{
    margin: auto;
    left: 100%;
    width: 80%;
  }
  .input-area{
    width: 80%;
    margin: 0 auto;
  }
  .ip-input-area{
    width: 100%;
    height: 250px;
    float: center;
    margin-bottom: 10px;
  }
  textarea {
    font-size: 14px;
    border-width: 1px;
    border-color: #000000;
    margin-top: 10px;
  }
  .content-area{
    width: 80%;
    margin: 0 auto;
  }
  .faq{
    padding-top: 10px;
    width:80%;
    margin: 0 auto;
  }
  .go-button{
    width: 90%;
    margin-top: 10px;
    margin: 0 auto;
  }
  .qa-button{
    background-color: #7dc243;
    border-color: #7dc243;
    color: #ffffff;
    height: 50px;
    font-size: 16px;
    font-family: Roboto, sans-serif;
    border-radius: 6px;
    padding-left: 25px;
    padding-right: 25px;
    padding-top: 5px;
    padding-bottom: 5px;
    width: 100%;
  }
  .spinner-area{
    width: 50%;
    margin: 0 auto;
  }
  .loading-spinner {
    border: 10px solid #f3f3f3; /* Light grey */
    border-top: 10px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 30px;
    height: 30px;
    animation: spin 2s linear infinite;
    margin: 0 auto;
  }
  @keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }
  .product-selector{
      width: 50%;
      align-content: right;
      height: 30px;
      font-size: 16px;
      color: black;
      font-family: Roboto, san-serif;
      border-color: black;
      margin-bottom: 16px;
  }
  footer {
    padding: 20px;
    background: #eaf0f2;
    font-family: inherit;
    font-size: 16px;
    font-weight: bold;
    color: #29306e;
    text-align: center;
  }
  footer a {
    color: #80308b;
    text-decoration: none;
  }
  footer a:hover {
    text-decoration: underline;
  }
  .footer-company-name{
    width: 80%;
    margin: 0 auto;
  }
#fake-bots{
  width: 80%;
  margin: 0 auto;
  text-align: center;
}
.result-message {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 18px;
  font-weight: bold;
  text-align: center;
  width: 80%;
  margin: 0 auto;
}
.red{
  color: red;
}
textarea::placeholder {
  padding-left: 3px;
}
.faq-line{
  border: 1px solid grey;
}
.line{
  width: 80%;
  margin: 0 auto;
  padding-top: 30px;
}
.faq-heading{
  font-size: 2.0em;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 500;
}
@media (max-width: 768px) {
  h1 {
    font-size: 1.2em;
    margin: 0 auto;
  }
  .main {
    width:100%;
  }
  .content-area {
    width: 100%;
  }
  .faq-heading{
    font-size: 1.2em;
  }
  .footer-logo{
    width: 50%;
  }
}
.runAgain{
  display: none;
}
#run-more-button{
  display: none;
  width: 20%;
  margin: 0 auto;
}
.user-agent{
  margin-bottom: 10px;
  font-family: monospace,monospace;
  color: #71067f;
  font-size: 14px;
}
.crawlers{
  font-style: italic;
}

